mytestkub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: test-image
          ports:
            - containerPort: 8000
