mytestkub-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mytestkub-service
spec:
  selector:
    app: task-deployment
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 80
  type: LoadBalancer
