mytestkub-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytestkub-ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mytestkub-service
            port:
              number: 80
